@@ -11,7 +11,7 @@
 #      either need to have our own halt or pivot_root
 #
 # Copyright (C) 2003, Buchan Milne <bgmilne@obsidian.co.za>
-# Copyright (C) 2003-2004, Jaco Greeff <jaco@linuxminicd.org>
+# Copyright (C) 2003-2004, Jaco Greeff <jaco@puxedo.org>
 #
 #    This program is free software; you can redistribute it and/or modify
 #    it under the terms of the GNU General Public License as published by
@@ -29,7 +29,7 @@
 #
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: halt.local.in,v 1.15 2004/02/25 06:48:59 jaco Exp $
+# $Id: halt.local.in,v 1.16 2005/01/15 00:31:09 tom_kelly33 Exp $
 #
 
 export PATH=/initrd/bin:/initrd/usr/bin:/initrd/sbin:/initrd/usr/sbin:/bin:/usr/bin:/sbin:/usr/sbin
