@@ -1,5 +1,11 @@
-# $Id: CHANGELOG,v 1.129 2005/01/09 22:14:09 tom_kelly33 Exp $
+# $Id: CHANGELOG,v 1.130 2005/01/15 00:31:09 tom_kelly33 Exp $
 
+* 2005-01-14
+	all - updated Jaco's email to jaco@puxedo.org
+	[hwdetect] - added sata loading
+	- added Chris usb fix for keyboard/mouse
+	- added "not loaded" for modules
+	
 * 2005-01-09
 	[mklivecd]
 	- restored md5sum as an option
